--- a/index.html
+++ b/index.html
@@ -167,6 +167,16 @@
                         <p>43 hours</p>
 
                     </li>
+                    <li class=" date " data-date=" 2020 " data-aos="fade-up" data-aos-delay="0">
+
+                        <h1>Freelance Job</h1>
+                        <p><span> Web Develompent:</span> Creation of Ecommerce Website for Online Courses</p>
+                        <p>Wordpress - WooCommerce</p>
+                        <a class=" link " href=" https://icprojectstudio.com.ar/ " target=" _blank ">Real State Web 
+                            <i class=" fas fa-angle-double-right "></i>
+                        </a>
+
+                    </li>
                     <li class=" date " data-date=" 2020 " data-aos="fade-up" data-aos-delay="300">
                         <h1>Udemy</h1>
                         <p><span>Desarrollo Web Completo:</span> HTML5, CSS3, JS, AJAX, PHP y MySQL</p>
