--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         <h1>Freelance Job</h1>
                         <p><span> Web Develompent:</span> Creation of Ecommerce Website for Online Courses</p>
                         <p>Wordpress - WooCommerce</p>
-                        <a class=" link " href=" https://icprojectstudio.com.ar/ " target=" _blank ">Real State Web 
+                        <a class=" link " href=" https://icprojectstudio.com.ar/ " target=" _blank ">I+C Projects 
                             <i class=" fas fa-angle-double-right "></i>
                         </a>
 
