--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <li class=" date " data-date=" 2020 " data-aos="fade-up" data-aos-delay="0">
 
                         <h1>Freelance Job</h1>
-                        <p><span> Web Develompent:</span> Creation of Ecommerce Website for Online Courses</p>
+                        <p><span> Web Development:</span> Creation of Ecommerce Website for Online Courses</p>
                         <p>Wordpress - WooCommerce</p>
                         <a class=" link " href=" https://icprojectstudio.com.ar/ " target=" _blank ">I+C Projects 
                             <i class=" fas fa-angle-double-right "></i>
