--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                         <ul class="icon-list ">
 
                             <li>
-                                <a href="# " class="icon-link ">
+                                <a href="https://www.linkedin.com/in/manuela-cepeda-b774311a4/" class="icon-link ">
                                     <i class="fab fa-github-square "></i>
                             </li>
                             <li>
-                                <a href="# " class="icon-link ">
+                                <a href="https://www.linkedin.com/in/manuela-cepeda-b774311a4/" class="icon-link ">
                                     <i class="fab fa-linkedin "></i>
                                 </a>
                             </li>
