--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <ul class="icon-list ">
 
                             <li>
-                                <a href="https://www.linkedin.com/in/manuela-cepeda-b774311a4/" class="icon-link ">
+                                <a href="https://github.com/manuela-cepeda" class="icon-link ">
                                     <i class="fab fa-github-square "></i>
                             </li>
                             <li>
