--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </nav>
         <div class="landing-text">
             <h1>Manuela Cepeda</h1>
-            <h6 class="container "> A Creative Freelancer & Frontend Developer</h6>
+            <h6 class="container "> A Creative Frontend Developer</h6>
         </div>
     </header>
 
@@ -177,7 +177,7 @@
                         </a>
 
                     </li>
-                    <li class=" date " data-date=" 2020 " data-aos="fade-up" data-aos-delay="300">
+                    <li class=" date " data-date=" 2019 " data-aos="fade-up" data-aos-delay="300">
                         <h1>Udemy</h1>
                         <p><span>Desarrollo Web Completo:</span> HTML5, CSS3, JS, AJAX, PHP y MySQL</p>
                         <p>83 hours</p>
@@ -195,7 +195,7 @@
 
 
                     </li>
-                    <li class=" date " data-date=" 2020 " data-aos="fade-up" data-aos-delay="600">
+                    <li class=" date " data-date=" 2019 " data-aos="fade-up" data-aos-delay="600">
                         <h1>Udemy</h1>
                         <p><span>Programación para principiantes - primeros pasos:</span> JavaScript</p>
                         <p>6 hours</p>
