--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>M L C</title>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="//db.onlinewebfonts.com/c/0923ee644c97a87d70269aa80a6f1e79?family=The+Historia+Demo">
     <link href="//db.onlinewebfonts.com/c/0923ee644c97a87d70269aa80a6f1e79?family=The+Historia+Demo" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
@@ -57,8 +58,8 @@
                 <div data-aos="fade-left" data-aos-delay="150">
                     <p> I am a Junior Frontend Developer. </p>
                     <p> Passionate about design, curious about technology, and with a highly analytical profile. </p>
-                    <p> As I completed my university studies and graduated as an architect, I entered the world of coding in a self-taught way, taking my first steps in HTML5, CSS3 and JavaScript, and doing different practices and freelance jobs. Today I
-                        am looking for career development opportunities in the field IT.</p>
+                    <p> As I completed my university studies as an architect, I entered the world of coding in a self-taught way, taking my first steps in HTML5, CSS3 and JavaScript, and doing different practices and freelance jobs. Today I
+                        am looking for career development opportunities in the IT field.</p>
                     <div class="social-media ">
                         <ul class="icon-list ">
 
@@ -173,18 +174,7 @@
                         <h1>Udemy</h1>
                         <p><span>Desarrollo Web Completo:</span> HTML5, CSS3, JS, AJAX, PHP y MySQL</p>
                         <p>83 hours</p>
-                        <a class=" link " href=" https://sharp-ride-d7120d.netlify.app/ " target=" _blank ">Real State Web 
-                                    <i class=" fas fa-angle-double-right "></i>
-                                </a>
-                        <a class=" link " href=" https://compassionate-murdock-4ee54a.netlify.app " target=" _blank ">
-                                    Coffee Blog
-                                    <i class=" fas fa-angle-double-right "></i>
-                                </a>
-                        <a class=" link " href=" https://loving-neumann-a521ab.netlify.app " target=" _blank ">
-                                    Freelance Portfolio
-                                    <i class=" fas fa-angle-double-right "></i>
-                                </a>
-
+                    
 
                     </li>
                     <li class=" date " data-date=" 2019 " data-aos="fade-up" data-aos-delay="600">
@@ -194,7 +184,7 @@
 
                     </li>
                     <li class=" date " data-date=" 2012-2020" data-aos="fade-up" data-aos-delay="600">
-                                <h1>Facultad de Arquitectura, Planeamiento y Diseño - UNR</h1>
+                                <h1>FAPyD - UNR</h1>
                                 <p><span>Architecture Degree</span>
 
 
@@ -309,8 +299,8 @@
                                 Technologies used: HTML, CSS  
                             </p>
                             <div class="portf-link" >
-                                <a class="link-contact"  target="_blank"  href="https://github.com/manuela-cepeda/agendacontactos.git" >Code</a>
-                                <a class="link-contact"  target="_blank"  href="http://miagendaphp.infinityfreeapp.com/" >Check Now</a>
+                                <a class="link-contact"  target="_blank"  href="https://github.com/manuela-cepeda/blogcafe.git" >Code</a>
+                                <a class="link-contact"  target="_blank"  href="https://compassionate-murdock-4ee54a.netlify.app" >Check Now</a>
                             </div>
                         </div>
             
@@ -348,13 +338,13 @@
             <ul class="icon-list ">
 
                 <li>
-                    <a href=" mailto:manulcepeda@gmail.com" class="link-contact">
+                    <a href=" mailto:manulcepeda@gmail.com" class="link-contact block">
                         Send me an email!
                     </a>
                 </li>
                 <li>
 
-                    <a href="tel:+5493416981208" class="link-contact">
+                    <a href="tel:+5493416981208" class="link-contact block">
                     Call me!
                     </a>
                 </li>
